# qgis-japan-mesh

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yml
japanese_grids/: __init__.py  metadata.txt  panel.py  plugin.py  provider.py
japanese_grids/algorithms/: create_grid_square.py  create_legacy_grid.py  load_estat_csv.py
japanese_grids/algorithms/utils/: generator.py  grid_square.py  gridsquare_to_box.py  legacy_grid.py
tests/: conftest.py  test_plugin.py
