[tool.poetry]
name = "japanese_grids"
version = "0.0.0"
description = ""
authors = [
    "MIERUNE Inc. <info@mierune.co.jp>",
    "Taku Fukada <naninunenor@gmail.com>",
]
readme = "README.md"
packages = [{ include = "japanese_grids" }]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
pyqt5-stubs = "^5.15"
ruff = "^0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["--import-mode=importlib"]
# filterwarnings = "ignore::DeprecationWarning"

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "B",
    "N",
    "UP",
    "I",
    "C90",
    "C4",
    "DTZ",
    "PIE",
    "PT",
    "Q",
    "SIM",
    "RUF",
]
ignore = ["N802", "E501", "RUF001"]


[tool.coverage.run]
source = ['japanese_grids']
# concurrency = ["thread"]
